<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="nz.co.asb.ui.TransactionUiBindingData"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TransactionDetailActivity"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/transactionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:text="@{data.transactionIdDisplayString}"
            tools:text="Transaction ID: 1"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintTop_toBottomOf="@id/transactionId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@{data.amountTextColor()}"
            android:text="@{data.amountDisplayString()}"
            tools:text="-100002.00"/>

        <TextView
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:text="@{data.gstDisplayString()}"
            android:visibility="@{data.gstVisibility()}"
            tools:text="GST 153"/>

        <TextView
            android:id="@+id/summery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/gst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:text="@{data.summary}"
            tools:text="Salary"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>